Bug 439480 - "UI hang with Not enough arguments [nsIMsgImapMailFolder.updateFolder]" [r+sr=kent]